Fixed js resources urls.

--- a/index.html
+++ b/index.html
@@ -357,8 +357,8 @@ function linkify( selector ) {
 
 		</div>
 
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.min.js"></script>
+		<script src="node_modules/reveal.js/lib/js/head.min.js"></script>
+		<script src="node_modules/reveal.js/js/reveal.min.js"></script>
 
 		<script>
 
