--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 					<h3>Metodologia do Treino</h3>
 					<br>
 					<p>
-						<small><a href="http://www.do-clube.org">Dô Clube</a></small>
+						<small>Gonçalo Neto / Francisco Condado / Bruno Pedro / Jorge Pesqueira / Paulo Silva </small>
+						<!-- <small><a href="http://www.do-clube.org">Dô Clube</a></small> -->
 					</p>
 				</section>
 
