Added key points and common most mistakes for main exercise.

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 					<section>
 						<h3>Pontos chave</h3>
 						<br>
-							<p class="fragment">Bater o braço a ± 40 graus.</p>
-							<p class="fragment">Trabalhar o batimento.</p>
+							<p class="fragment">Bater o braço a ± 40 graus</p>
+							<p class="fragment">Trabalhar o batimento</p>
 					</section>
 				</section>
 
@@ -130,7 +130,20 @@
 					</section>
 
 					<section>
-						
+						<h3>Pontos chave</h3>
+						<br>
+							<p class="fragment">Pouca distância ao solo</p>
+							<p class="fragment">Apoio da cabeça por parte do parceiro </p>
+							<p class="fragment">O praticante controla o momento da queda</p>
+							<p class="fragment">Prancha inicial + Momento do batimento</p> 
+					</section>
+
+					<section>
+						<h3>Erros comuns</h3>
+						<br>
+							<p class="fragment">Colocar o corpo de forma errada - centro de massa do praticante deve estar sobre o centro de massa do parceiro</p>
+							<p class="fragment">Bater demasiado cedo ou demasiado tarde</p>
+							<p class="fragment">Não iniciar o educativo na posição de prancha</p>
 					</section>
 					
 					<section>
