Changed exercise 2b slide title.

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 					</section>
 					
 					<section>
-						<h3>Variação</h3>
+						<h3>Variante</h3>
 						<br>
 						<p>+ altura</p>
 						<p>+ dificuldade</p>
